--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -1,21 +1,35 @@
+@import url(reset.scss);
+
+@font-face {
+  font-family: "Primary";
+  font-style: normal;
+  font-weight: 400;
+  src: url("https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2304-2@1.0/SUITE-Regular.woff2")
+    format("woff2");
+}
+
+@font-face {
+  font-family: "secondary";
+  font-style: normal;
+  src: url("../Charlotte.otf") format("opentype");
+}
+
 :root {
-  --primary: #e4e8ed;
-  --secondary: #b9a1a1;
-  --alternate: #d82e2e;
+  --primary: #252525;
+  --secondary: #f5f5f5;
+  --alterante: #f58ea9;
+  --alterante2: #00674c;
+  --ease: ease-in-out;
 }
 
 ::-webkit-scrollbar {
   display: none;
 }
 
-// @font-face {
-//   font-family: "Primary";
-//   font-style: normal;
-//   font-weight: 100;
-//   src: url("./fonts/questrial.woff2") format("woff2"),
-//     url("./fonts/questrial.woff2") format("woff");
-//   font-display: swap;
-// }
+::selection {
+  background-color: var(--alterante);
+  color: var(--secondary);
+}
 
 html {
   font-size: max(100vw/1920 * 10);
@@ -23,13 +37,19 @@ html {
 
 body {
   background-color: var(--primary);
-  // font-family: "Primary";
+  font-family: "Primary";
   color: var(--secondary);
+}
+
+html,
+body {
+  overflow: visible !important;
+  height: auto;
 }
 
 h1 {
   font-size: 24rem;
-  line-height: 1;
+  line-height: 0.7;
 }
 
 h2 {
@@ -46,4 +66,47 @@ span {
   display: block;
   font-size: 1.8rem;
   line-height: 1.2;
+}
+
+.main {
+  overflow-y: scroll;
+  height: 100vh;
+  scroll-snap-type: y mandatory;
+  scroll-snap-stop: always;
+
+  section {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    scroll-snap-align: start;
+
+    &:nth-child(4) {
+      height: 30vh;
+      background-color: var(--secondary);
+      color: var(--primary);
+    }
+
+    &:nth-child(5) {
+      height: 30vh;
+      background-color: var(--primary);
+      color: var(--secondary);
+    }
+  }
+}
+
+@media screen and (max-width: 768px) {
+  html {
+    font-size: max(100vw/768 * 10);
+  }
+
+  h1 {
+    font-size: 24rem;
+  }
+
+  span {
+    font-size: 2.4rem;
+  }
 }
