--- a/src/assets/css/about.scss
+++ b/src/assets/css/about.scss
@@ -25,6 +25,12 @@
       }
     }
   }
+
+  &:hover {
+    background-color: var(--alterante);
+    color: var(--secondary);
+    transition: color 0.32s var(--ease);
+  }
 }
 
 .modal {
@@ -128,6 +134,24 @@
     height: 100%;
     pointer-events: none;
     cursor: pointer;
+  }
+}
+
+.about {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  background: url("https://images.unsplash.com/photo-1434030216411-0b793f4b4173?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D")
+    no-repeat center/cover;
+
+  &::before {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.3);
+    content: "";
   }
 }
 
