--- a/src/assets/css/header.scss
+++ b/src/assets/css/header.scss
@@ -13,10 +13,25 @@
   mix-blend-mode: difference;
 
   .header_logo span {
+    padding-left: 7.2rem;
+    position: relative;
+    font-family: "alterante";
     font-size: 4.8rem;
     font-weight: 900;
     text-transform: uppercase;
     // letter-spacing: 1.2rem;
+    &::before {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-image: url("../images/logo.png");
+      background-repeat: no-repeat;
+      background-position: left;
+      background-size: contain;
+      content: "";
+    }
   }
 
   .header_menu_button {
@@ -86,6 +101,9 @@
         display: flex;
         gap: 12rem;
         justify-content: space-between;
+        a {
+          text-transform: none;
+        }
       }
 
       .menu_row_title {
