--- a/src/assets/css/portfolio.scss
+++ b/src/assets/css/portfolio.scss
@@ -41,7 +41,7 @@
   background-repeat: no-repeat;
   background-position: right center;
   background-size: cover;
-  grid-area: 1/1/3/4;
+  grid-area: 1/1/3/5;
 }
 
 .bento_box:nth-child(2) {
@@ -50,7 +50,7 @@
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
-  grid-area: 1/4/3/9;
+  grid-area: 1/5/3/9;
 }
 
 .bento_box:nth-child(3) {
@@ -122,44 +122,6 @@
   line-height: 1.2;
 }
 
-@media screen and (max-width: 769px) {
-  .bento_container {
-    grid-template-rows: repeat(5, 1fr);
-  }
-
-  .bento_box:nth-child(1) {
-    grid-area: 1/1/2/9;
-  }
-
-  .bento_box:nth-child(2) {
-    grid-area: 2/1/3/9;
-  }
-
-  .bento_box:nth-child(3) {
-    grid-area: 3/1/4/9;
-  }
-
-  .bento_box:nth-child(4) {
-    grid-area: 4/1/5/9;
-  }
-
-  .bento_box:nth-child(5) {
-    grid-area: 5/1/6/5;
-  }
-
-  .bento_box:nth-child(6) {
-    grid-area: 5/5/6/9;
-  }
-
-  .bento_box span {
-    font-size: 4.8rem;
-  }
-
-  .bento_intro h1 .char {
-    font-size: 32rem;
-  }
-}
-
 dialog.portfolio_modal {
   display: flex;
   align-items: center;
@@ -195,6 +157,7 @@ dialog.portfolio_modal.show {
   // align-items: center;
   flex-direction: column;
   padding: 2rem;
+  overflow: hidden;
   position: relative;
   z-index: 9999;
   width: 70vw;
@@ -214,8 +177,8 @@ dialog.portfolio_modal.show {
   height: 100%;
 }
 .modal_image {
-  width: 50%;
-  height: 100%;
+  width: 50vw;
+  // height: 100vh;
   border-radius: 1rem;
   object-fit: cover;
   // object-position: right center;
@@ -223,7 +186,7 @@ dialog.portfolio_modal.show {
 
 .modal_infoo {
   display: flex;
-  gap: 10px;
+  gap: 1rem;
   flex-direction: column;
   width: 100%;
   height: 100%;
@@ -234,7 +197,7 @@ dialog.portfolio_modal.show {
 
 .modal_links {
   display: flex;
-  gap: 1.2rem;
+  gap: 0.72rem;
   margin-top: 1.2rem;
 }
 
@@ -252,11 +215,43 @@ dialog.portfolio_modal.show {
 }
 
 .modal_info {
+  display: flex;
+  // align-items: center;
+  justify-content: center;
   margin-top: 1.5rem;
+  padding: 4.8rem;
+  overflow-x: hidden;
+  overflow-y: auto;
+  height: 100vh;
+  background-color: var(--primary);
   font-weight: 100;
-  line-height: 3rem;
+  line-height: 4.8rem;
+  color: var(--secondary);
   text-align: justify;
-  letter-spacing: 0.15rem;
+  letter-spacing: -0.12rem;
+  scrollbar-width: thin; /* Firefox에서 스크롤바 얇게 */
+  scrollbar-color: var(--secondary) transparent; /* 스크롤바 색상 */
+  border-radius: 1.2rem;
+  /* 크롬, 엣지, 사파리 - 스크롤바 커스텀 */
+  .scrollable-div::-webkit-scrollbar {
+    width: 1rem; /* 스크롤바 너비 */
+  }
+
+  /* ▲▼ 버튼(스크롤 화살표) 숨기기 */
+  .scrollable-div::-webkit-scrollbar-button {
+    display: none; /* 버튼 제거 */
+  }
+
+  /* 스크롤 바(thumb) 스타일 */
+  .scrollable-div::-webkit-scrollbar-thumb {
+    background-color: (--secondary); /* 스크롤 바 색상 */
+    border-radius: 50rem; /* 둥글게 만들기 */
+  }
+
+  /* 스크롤 트랙 숨기기 */
+  .scrollable-div::-webkit-scrollbar-track {
+    background: transparent;
+  }
 }
 
 .close_btn {
@@ -326,4 +321,84 @@ dialog.portfolio_modal.show {
 
 .tech-tag:hover {
   filter: invert(100%);
+}
+
+.modal_contribution {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  // overflow: hidden;
+  position: relative;
+  width: 100%;
+  height: 2.4rem;
+  background-color: #f0f0f0;
+  border-radius: 50rem;
+}
+
+.modal_contribution .bar {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 0%;
+  height: 100%;
+  background-color: var(--primary); /* 게이지 색상 */
+  transition: width 0.8s ease-in-out;
+  border-radius: 50rem;
+}
+
+.modal_contribution .text {
+  position: absolute;
+  font-size: 1.2rem;
+  font-weight: 700;
+  transition: color 0.3s ease-in-out; /* 색상이 부드럽게 변경되도록 설정 */
+}
+
+@media screen and (max-width: 769px) {
+  .bento_container {
+    grid-template-rows: repeat(5, 1fr);
+  }
+
+  .bento_box:nth-child(1) {
+    grid-area: 1/1/2/9;
+  }
+
+  .bento_box:nth-child(2) {
+    grid-area: 2/1/3/9;
+  }
+
+  .bento_box:nth-child(3) {
+    grid-area: 3/1/4/9;
+  }
+
+  .bento_box:nth-child(4) {
+    grid-area: 4/1/5/9;
+  }
+
+  .bento_box:nth-child(5) {
+    grid-area: 5/1/6/5;
+  }
+
+  .bento_box:nth-child(6) {
+    grid-area: 5/5/6/9;
+  }
+
+  .bento_box span {
+    font-size: 4.8rem;
+  }
+
+  .bento_intro h1 .char {
+    font-size: 32rem;
+  }
+
+  .modal_infooo {
+    flex-direction: column;
+
+    .modal_info {
+      height: 50vh;
+    }
+
+    .modal_image {
+      height: 50vh;
+    }
+  }
 }
